# sml-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workspaces/: ci.yml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  stream.rs
crates/lexer/tests/: keywords.rs  lex_smoke.rs  stream.rs
crates/parser/: Cargo.toml
crates/parser/src/: fixity.rs  lib.rs  util.rs
crates/parser/tests/: as_pattern_test.rs  decs.rs  exception.rs  exp_basics.rs  exp_smoke.rs  infix.rs  pat_shapes.rs  types.rs  various.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lib.rs  span.rs
crates/syntax/tests/: ast-smoke.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: env.rs  errors.rs  lib.rs  scheme.rs  subst.rs  types.rs  unify.rs
crates/typecheck/src/infer/: ast_map.rs  expr.rs  mod.rs  pat.rs
crates/typecheck/tests/: basics.rs
