[package]
name = "repl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sml-repl"
path = "src/main.rs"

[dependencies]

syntax = { path = "../syntax" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
typecheck = { path = "../typecheck" }
